shifted toastr message up slightly to avoid covering footer action buttons

--- a/src/renderer/css/preset_save_as.css
+++ b/src/renderer/css/preset_save_as.css
@@ -40,3 +40,5 @@ select[name="selectedPreset"] {
   width: 100%;
   height: 25px;
 }
+
+.toast-bottom-right { bottom: 66px; }
